@@ -1,7 +1,9 @@
 #ifndef _DBGUTILS_H_
 #define _DBGUTILS_H_
 
+#include <errno.h>
 #include <spawn.h>
+#include <sys/sysctl.h>
 #include "defs.h"
 #include "dbgcmd.h"
 #include "machthread.h"
